More alignment fixes between front and back

--- a/app/assets/stylesheets/back.scss
+++ b/app/assets/stylesheets/back.scss
@@ -54,7 +54,7 @@
 
 .back-return {
   margin-top: auto;
-  margin-bottom: 42px;
+  margin-bottom: 45px;
   @include roboto-bold;
   font-size: 24px;
   letter-spacing: 0.8px;
